--- a/Search Algorithms/index.html
+++ b/Search Algorithms/index.html
@@ -17,6 +17,7 @@
   <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="javascript/data_Structures.js"></script>
   <script src="javascript/solvers.js"></script>
+  <script src="javascript/maze_generators.js"></script>
   <script src="javascript/helper_Functions.js"></script>
   <script src="javascript/maze.js"></script>
   <script src="javascript/sketch.js"></script>
